tests/fixtures/errors/unknown_call.z
# unknown_call.z -- a bare call to a name that resolves nowhere diagnoses
# E0023 with the NAME (the loader previously said only "Unknown reference";
# the in-closure variant -- a name defined in a non-dependency unit --
# is checked at the binding site and probe-verified against the compiler
# closure itself).
main: function is {
    x: bogusfn v: 1
    print "x=\{x}"
}
